// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-10:active .emotion-19[data-disabled='false']:after {
  width: 22.04px;
}

.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-16 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.emotion-18:hover {
  background-color: #d9dadd;
}

.emotion-18:after {
  content: "";
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-18:focus-within,
.emotion-18:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-18[data-disabled="false"]:active:after {
  width: 22.04px;
}

.emotion-18[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-18[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-18[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-18[data-checked="true"]:focus-within,
.emotion-18[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-18[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-18[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-18[data-error="true"]:focus-within,
.emotion-18[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-18[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-18[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-18[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-20 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-20[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":r1:"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 2
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":r4:"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-10:active .emotion-19[data-disabled='false']:after {
  width: 22.04px;
}

.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-16 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.emotion-18:hover {
  background-color: #d9dadd;
}

.emotion-18:after {
  content: "";
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-18:focus-within,
.emotion-18:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-18[data-disabled="false"]:active:after {
  width: 22.04px;
}

.emotion-18[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-18[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-18[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-18[data-checked="true"]:focus-within,
.emotion-18[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-18[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-18[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-18[data-error="true"]:focus-within,
.emotion-18[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-18[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-18[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-18[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-20 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-20[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":r8:"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 2
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":rb:"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-10:active .emotion-19[data-disabled='false']:after {
  width: 22.04px;
}

.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-16 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.emotion-18:hover {
  background-color: #d9dadd;
}

.emotion-18:after {
  content: "";
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-18:focus-within,
.emotion-18:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-18[data-disabled="false"]:active:after {
  width: 22.04px;
}

.emotion-18[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-18[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-18[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-18[data-checked="true"]:focus-within,
.emotion-18[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-18[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-18[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-18[data-error="true"]:focus-within,
.emotion-18[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-18[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-18[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-18[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-20 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-20[disabled] {
  cursor: not-allowed;
}

.emotion-34 {
  color: #b3144d;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":rn:"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 2
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":rq:"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <p
        class="emotion-34 emotion-7"
      >
        Eror content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-10:active .emotion-19[data-disabled='false']:after {
  width: 22.04px;
}

.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-16 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.emotion-18:hover {
  background-color: #d9dadd;
}

.emotion-18:after {
  content: "";
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-18:focus-within,
.emotion-18:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-18[data-disabled="false"]:active:after {
  width: 22.04px;
}

.emotion-18[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-18[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-18[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-18[data-checked="true"]:focus-within,
.emotion-18[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-18[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-18[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-18[data-error="true"]:focus-within,
.emotion-18[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-18[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-18[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-18[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-20 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-20[disabled] {
  cursor: not-allowed;
}

.emotion-34 {
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
          </legend>
          <div
            class="emotion-8 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":rf:"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-1"
              >
                <div
                  class="emotion-14 emotion-15"
                >
                  <label
                    class="emotion-16 emotion-7"
                  >
                    Toggle 2
                  </label>
                </div>
              </div>
              <div
                class="emotion-18 emotion-19"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-20 emotion-21"
                  id=":ri:"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <p
        class="emotion-34 emotion-7"
      >
        Helper content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  color: #222638;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.emotion-9 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-13:active .emotion-22[data-disabled='false']:after {
  width: 22.04px;
}

.emotion-13[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-17 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-19 {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.emotion-21:hover {
  background-color: #d9dadd;
}

.emotion-21:after {
  content: "";
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-21:focus-within,
.emotion-21:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-21[data-disabled="false"]:active:after {
  width: 22.04px;
}

.emotion-21[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-21[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-21[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-21[data-checked="true"]:focus-within,
.emotion-21[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-21[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-21[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-21[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-21[data-error="true"]:focus-within,
.emotion-21[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-21[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-21[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-21[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-23 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-23[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <legend
            class="emotion-6 emotion-7"
          >
            Label 
            <svg
              class="emotion-8 emotion-9 emotion-10"
              viewBox="0 0 20 20"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </legend>
          <div
            class="emotion-11 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-1"
              >
                <div
                  class="emotion-17 emotion-18"
                >
                  <label
                    class="emotion-19 emotion-7"
                  >
                    Toggle 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-21 emotion-22"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-23 emotion-24"
                  id=":rv:"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-1"
              >
                <div
                  class="emotion-17 emotion-18"
                >
                  <label
                    class="emotion-19 emotion-7"
                  >
                    Toggle 2
                  </label>
                </div>
              </div>
              <div
                class="emotion-21 emotion-22"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-23 emotion-24"
                  id=":r12:"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
